<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/loginImage"
        android:src="@drawable/login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/loginimage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImage"
        android:layout_marginHorizontal="24dp"
        android:alpha="0"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">
            <TextView
                android:id="@+id/wellcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wellcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:textColor="@color/mainColor"
                android:textStyle="bold"
                android:alpha="0"
                />

            <com.example.storyappsubmission.utils.CustomEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wellcome"
                android:alpha="0"
                />
            <com.example.storyappsubmission.utils.CustomPasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textPassword"
                android:alpha="0"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_email"/>

            <com.example.storyappsubmission.utils.CustomButton
                android:id="@+id/btn_login"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:alpha="0"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
                android:text="@string/logintxt"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="15dp"
               android:orientation="horizontal"
               android:gravity="center"
               app:layout_constraintTop_toBottomOf="@+id/btn_login"
               >
               <TextView
                   android:id="@+id/account"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:alpha="0"
                   android:text="@string/doesn_t_have_account"/>
               <TextView
                   android:id="@+id/tv_register"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/register_here"
                   android:textStyle="bold"
                   android:textColor="@color/mainColor"
                   android:layout_marginStart="5dp"
                   android:clickable="true"
                   android:alpha="0"
                   android:focusable="true" />
           </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>