<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addStory.AddStoryFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        app:title="Add Story"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_back_24"/>
    <ImageView
        android:id="@+id/iv_add_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_story"
        android:src="@drawable/baseline_image_24"
        tools:src="@drawable/baseline_image_dark_24"/>
    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_image">
        <com.example.storyappsubmission.utils.CustomButton
            android:id="@+id/btn_camera"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:text="@string/camera"/>
        <com.example.storyappsubmission.utils.CustomButton
            android:id="@+id/btn_galery"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/galery"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="24dp"
        android:id="@+id/tf_contentDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/deskripsi"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.example.storyappsubmission.utils.CustomButton
        android:id="@+id/btn_add_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@+id/tf_contentDesc"/>
    <ProgressBar
        android:id="@+id/progress_bar_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>